--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </tr>
                 <tr>
                     <td>git commit -a -m "comment"</td>
-                    <td>Добавить и совершить комит</td>
+                    <td>Добавить и совершить комит.</td>
                 </tr>
                 <tr>
                     <td>git push url</td>
